fixed mutate